--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <div class="row">
         <div class="col-2 form-container">
-            <form class="form">
+            <form class="form" action="">
                 <input type="text" class="form1" id="input" value="">
                 <br>
                 <input type="submit" class="form2" id="submit" value="Make New Button">
