--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
             </form>
         </div>
     </div>
+    <div class="col-6 big-display"></div>
+
     <ul class="gif-container" id="display">
 
     </ul>
