update to scrolling

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="form-container">
+        <div class="form-container" id="forms">
             <form class="form" action="">
                 <input type="text" class="form1" id="input" value="">
                 <br>
@@ -38,6 +38,7 @@
     <ul class="gif-container" id="display">
 
     </ul>
+
 
     <div class="col-3 new-button"></div>
 
