cleaned up code lines

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+
     <div class="container demo">
         <div class="content">
             <div id="large-header" class="large-header">
@@ -24,6 +25,7 @@
             </div>
         </div>
     </div>
+
     <div class="row">
         <div class="form-container" id="forms">
             <form class="form" action="">
@@ -33,19 +35,12 @@
             </form>
         </div>
     </div>
+
     <div class="col-6 big-display"></div>
 
-    <ul class="gif-container" id="display">
-
-    </ul>
-
+    <ul class="gif-container" id="display"></ul>
 
     <div class="col-3 new-button"></div>
-
-
-
-
-
 
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/TweenLite.min.js"></script>
     <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/499416/EasePack.min.js"></script>
